// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render args 1`] = `
<div>
  

  <div
    class="alert alert-danger"
    data-widget="alert"
  >
    
  
    <span
      data-id="message"
    >
      Network error
    </span>
    
  
    <img
      data-id="image"
      src="neutral.svg"
    />
    
  
    <button
      data-action="close"
      type="button"
    >
      Close
    </button>
    

  </div>
  

</div>
`;

exports[`should render defaults 1`] = `
<div>
  

  <div
    class="alert alert-danger"
    data-widget="alert"
  >
    
  
    <span
      data-id="message"
    />
    
  
    <img
      data-id="image"
      src="error.svg"
    />
    
  
    <button
      data-action="close"
      type="button"
    >
      Close
    </button>
    

  </div>
  

</div>
`;
